fix mobile navigation when admin bar is visible

--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -63,6 +63,10 @@ $header-height: 60px;
   position: absolute;
   top: $header-height;
 
+  .admin-bar & {
+    top: $header-height+46px;
+  }
+
   ul {
     display: none;
     list-style: none;
